# GenPass

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
completions/: genpass.bash  genpass.fish  genpass.zsh
genpass/: __init__.py  __main__.py  cli.py
